[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimart-review-agent"
version = "0.1.0"
description = "Agentic LLM application composing OmniMart, go-llm-gateway, vertex-ai-rag-pipeline, and llm-eval-harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shubham Bakre" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
omnimart-review-agent = "omnimart_review_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omnimart_review_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a running OmniMart server on localhost",
]
